fixing bug on firefox

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -16,6 +16,13 @@ html, body {
 	overflow-x: hidden;
 	font-family: 'Lato', sans-serif;
 	font-weight: 400;
+	font-size: 14px;
+	@-moz-document url-prefix() {
+		font-size: 12.5px; /* Firefox */
+	}
+	@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+    font-size: 12px; /* IE */
+	}	
 }
 
 ul {
@@ -161,7 +168,7 @@ hr {
 
 .link-with-border {
 	position: relative;
-	width: 200px;
+	width: 220px;
 	background-color: #fff;
 	font-weight: 700;
 	padding: 3px 60px 7px 30px;
@@ -202,6 +209,10 @@ hr {
 		position: relative;
 		top: -13px;
 		left: 0.3px;
+		@-moz-document url-prefix() {
+			top: -11px;
+			left: 0;
+		}
 	}
 }
 
@@ -1164,6 +1175,10 @@ nav {
 			.plus-adjust {
 				top: -12.8px;
 				left: 1.8px;
+				@-moz-document url-prefix() {
+					top: -10.5px;
+					left: 2.5px;
+				}
 			}
 		}
 		.landscape-margin {
@@ -3856,27 +3871,6 @@ iframe {
 	}
 	@media (max-width: 1200px) { 
 		font-size: 3em;
-		/*.phrase-2 {
-			top: 34.5%;
-		}
-		.phrase-3 {
-			top: 39%;
-		}
-		.phrase-4 {
-			top: 44%;
-		}
-		.phrase-5 {
-			top: 51%;
-			hr {
-				width: 170px;
-			}
-		}
-		.phrase-7 {
-			top: 33.5%;
-		}
-		.phrase-8 {
-			top: 40%;
-		}*/
 	}
 	@media (max-width: 991px) { 
 		font-size: 2.2em;
@@ -4397,6 +4391,9 @@ footer {
 					color: #2977F2;
 					font-weight: 100;
 					height: 37px;
+					@-moz-document url-prefix() {
+						height: 35px; /* Firefox */
+					}
 					width: 300px;
 					margin-left: 10px;
 					border: 0px solid #000;
